local-storage/styles.css
@import url(../vendor/normalize.css);
@import url(../fonts/fonts.css);

@import url(../images/back-button/back-button.css);

html {
  box-sizing: border-box;
  margin: 0;
}

.page {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  width: 100%;
  min-width: 220px;
  min-height: 100vh;
  background-color: black;
  font-family: "RobotoSlab";
  font-weight: 200;
  box-sizing: border-box;
  margin: 0;
  padding: 60px 36px;
  background-image: url(./images/background.jpeg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: white;
}

.page:after {
  content: "";
  background: linear-gradient(
    0deg,
    rgb(95 95 95 / 68%) 34%,
    rgba(31, 33, 32, 0) 100%
  );
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
}

.icon {
  width: 150px;
  margin-bottom: 32px;
  fill: #fff;
  z-index: 1;
  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.4));
  box-sizing: border-box;
}

.wrapper {
  z-index: 1;
  background: rgba(255, 255, 255, 0.8);
  border-radius: 5px;
  padding: 16px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  box-shadow: 0 16px 16px rgba(0, 0, 0, 0.2);
}

.title {
  text-align: center;
  width: 100%;
  margin: 0;
  text-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
}

.plates {
  list-style: none;
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  margin-bottom: 24px;
  width: 100%;
}

.loading {
  margin: 0;
  text-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
  font-weight: 700;
  width: 100%;
  text-align: center;
}

.plate {
  margin: 0;
  /* text-shadow: 0 0 3px rgba(0, 0, 0, 0.6); */
  font-weight: 700;
  width: 100%;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  line-height: 36px;
  padding-left: 8px;
  color: rgba(65, 65, 65, 1);
  display: flex;
}

.checkbox {
  display: none;
}

.label {
  cursor: pointer;
  min-width: 100%;
}

.label::before {
  content: "⬜️";
  text-shadow: 0 0px 8px rgb(0, 0, 0, 0.3);
  margin-right: 8px;
}

.checkbox:checked + .label::before {
  content: "☑️";
  text-shadow: none;
  margin-right: 8px;
}

.item-input {
  background-color: transparent;
  border: 2px solid #fff;
  border-radius: 4px;
  padding: 4px;
  /* text-shadow: 0 0 3px rgba(0, 0, 0, 0.6); */
  color: rgb(133, 133, 133);
}

.submit-button {
  background-color: transparent;
  border-radius: 4px;
  border: 2px solid #fff;
  cursor: pointer;
  padding: 4px;
  color: #fff;
  text-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
}

/* .overlay {
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
  display: none;
  align-items: center;
  justify-content: center;
  background-image: url(./images/stop.jpeg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: white;
  z-index: 4;
  padding: 12px;
  padding: 0;
}

.overlay:after {
  content: "";
  background-color: #362d2499;
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
}

@media (max-width: 780px) {
  .overlay {
    display: flex;
  }
  .canvas {
    display: none;
  }
} */

